test/unit/goldens/testParseExprAtomLabelsMemberFail.golden
Text: 'labels ∋ {some label}'

Tokens: [labels,∋,{some,label}]

Expr Text: labels ∋ {some label}

Error: Pacer.Class.Parser.parseWith:1:22:
  |
1 | labels ∋ {some label}
  |                      ^
Unexpected char '{'. Expected exactly one element, not set syntax.

